修正了没有设置默认触发间隔的BUG

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "keywords": [
     "jquery",
-    "autocomplete"
+    "datalazyload"
   ],
   "author": "HISAME SHIZUMARU",
   "license": "MIT",
